FIXES image problem on mobile

--- a/public/scss/_nav.scss
+++ b/public/scss/_nav.scss
@@ -37,6 +37,11 @@
     width: $sidebar-base-width;
     height: 100vh;
 
+
+    .nav-background {
+      display: none;
+    }
+
     .navbar-brand {
       display: flex;
 
